# BankingApplication

./: README.md  pyproject.toml
src/: masks.py  processing.py  widget.py
tests/: testing.py
